# macros

./: Cargo.toml  cliff.toml
examples/: auto_debug.rs  auto_deref.rs  enum_macro.rs  enum_macro_darling.rs  my_ready.rs  my_try.rs  my_vec.rs
src/: auto_debug.rs  auto_deref.rs  enum_macro.rs  enum_macro_daring.rs  lib.rs
